modules/wycs/tests/valid/test_069.wyal
assert:
  forall ({(int, int)} xs, {(int, int)} ys):
    (|xs| > 0 && xs ⊆ ys) ==> exists (int, int) p ; p in ys
