modules/wycs/tests/invalid/test_062.wyal
assert:
  forall({int} xs, {int} ys):
       xs ⊆ ys ==> |ys| > 0